src/components/ManageExpense/ManageExpense.css
input[type="submit"] {
  border-radius: 50px;
}

.redStar {
  color: red;
}
.formContainer {
}
.main {
  display: flex;
  justify-content: space-between;
}
.total {
  width: 100%;
  font-size: 1rem;
}
.headers {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
@media screen and (max-device-width: 640px) {
  .main {
    flex-direction: column;
    align-items: center;
  }
  .headers {
    flex-direction: column;
  }
  .list-group-item {
    flex-direction: column;
  }
  .menuButtons {
    margin-top: 10px;
  }
  .vr{
    display: none;
  }
  .details {
  }
}

.badge {
  margin-left: 5px;
}
.new {
  margin-left: 20px;
}
.details {
  max-height: 970px;
  overflow-y: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.card-header {
  font-weight: bold;
}
.dot {
  height: 25px;
  width: 25px;
  opacity: 65%;
  border-radius: 50%;
}
.spinner-border {
  margin-left: 10px;
}
.fontWhite {
  color: white;
  opacity: 65%;
}

.list-group-item {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.buttons {
  display: flex;
  justify-content: space-between;
}

.edit,
.delete {
  margin-right: 10px;
  margin-bottom: 10px;
}

.red {
  background-color: red;
}
.yellow {
  background-color: yellow;
  color: black;
}
.purpule {
  background-color: purple;
}
.green {
  background-color: green;
}
.violet {
  background-color: violet;
}
.orange {
  background-color: orange;
}
.black {
  background-color: black;
}
.lime {
  background-color: lime;
  color: black;
}
.naviblue {
  background-color: navy;
}
.grey {
  background-color: grey;
}
.brown {
  background-color: #873600;
}
.indian {
  background-color: #f50aa7;
}

/* Icon Color*/

.redColor {
  color: red;
}
.yellowColor {
  color: yellow;
}
.purpuleColor {
  color: purple;
}
.greenColor {
  color: green;
}
.violetColor {
  color: violet;
}
.orangeColor {
  color: orange;
}
.blackColor {
  color: black;
}
.limeColor {
  color: lime;
}
.naviblueColor {
  color: navy;
}
.greyColor {
  color: grey;
}
.brownColor {
  color: #873600;
}
.indianColor {
  color: #f50aa7;
}

/* chips design */
.chip {
  display: inline-block;
  padding: 0 25px;
  height: 30px;
  font-size: 16px;
  line-height: 30px;
  border-radius: 25px;
  background-color: #f1f1f1;
  color: white;
  opacity: 70%;
}

hr {
  color: gray;
  border-style: inset;
  border-width: 1px;
  margin: 0.5em auto;
}

